Fix click to scroll z-index

--- a/site/assets/scss/bases/_layout.scss
+++ b/site/assets/scss/bases/_layout.scss
@@ -60,7 +60,7 @@ a {
             left: 0;
             top: 0;
             background: linear-gradient(to right, $color1, transparent);
-            z-index: 9;
+            z-index: 8;
         }
 
         &::after{
@@ -80,7 +80,7 @@ a {
         right: 0;
         background: transparent;
         width: 10vw;
-        z-index: 7;
+        z-index: 9;
         cursor: pointer;
 
         @include media( '>medium' ) {
